--- a/src/index.css
+++ b/src/index.css
@@ -53,8 +53,7 @@ body {
 
   .cardBorder {
     border: 1px solid rgba(243, 240, 227, 1);
-    box-shadow: 0px 4px 32px 1px rgba(24, 49, 83, 0.15);
-    border-radius: 12px;
+    border-radius: 12px 12px 0px 0px;
   }
 
   .bgDescCard {
@@ -63,7 +62,7 @@ body {
 
   .cardShadow {
     box-shadow: -4px 4px 32px 4px rgba(0, 1, 0, 0.1);
-    border-radius: 4px;
+    border-radius: 12px;
   }
 
   .linearBlackBtn {
