--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@ body {
 
   .cardBorder {
     border: 1px solid rgba(243, 240, 227, 1);
-    border-radius: 12px 12px 0px 0px;
+    border-radius: 12px 12px 12px 12px;
   }
 
   .bgDescCard {
@@ -72,7 +72,7 @@ body {
   .loader {
     border: 6px solid #f3f3f3;
     ;
-    border-top: 6px solid #FF4C29;
+    border-top: 6px solid #007AFF;
     border-radius: 50%;
     width: 40px;
     height: 40px;
